--- a/index.html
+++ b/index.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My GitHub Page Santhu</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Santhosh's Page</title>
+  <style>
+    /* Background image: subtle royal purple gradient */
+    body {
+      margin: 0;
+      height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #e6e6fa;
+      background: linear-gradient(135deg, #3a0ca3, #720026);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 4rem;
+      font-weight: 700;
+      margin: 0 0 10px;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+    }
+
+    p {
+      font-size: 1.5rem;
+      margin: 0 0 40px;
+      font-weight: 500;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.5);
+    }
+
+    .social-links a {
+      margin: 0 15px;
+      color: #d6bcfa;
+      text-decoration: none;
+      font-size: 1.8rem;
+      font-weight: 600;
+      border-bottom: 2px solid transparent;
+      transition: all 0.3s ease;
+      padding-bottom: 4px;
+    }
+
+    .social-links a:hover {
+      color: #f0e5ff;
+      border-color: #f0e5ff;
+    }
+  </style>
 </head>
 <body>
-    <h1>Hello, GitHub Pages! Santhu</h1>
-    <p>This is my first GitHub Pages website.</p>
+  <h1>Santhosh</h1>
+  <p>Connect with me on social media:</p>
+  <div class="social-links">
+    <a href="https://twitter.com/your_twitter" target="_blank" rel="noopener noreferrer">Twitter</a>
+    <a href="https://linkedin.com/in/your_linkedin" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+    <a href="https://github.com/your_github" target="_blank" rel="noopener noreferrer">GitHub</a>
+    <a href="https://instagram.com/your_instagram" target="_blank" rel="noopener noreferrer">Instagram</a>
+  </div>
 </body>
 </html>
